<resources>
    <string name="app_name">A3csci3130</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="updateButton">UPDATE DATA</string>
    <string name="deleteButton">DELETE ENTRY</string>
    <string name="createButton">CREATE ENTRY</string>
    <string name="newButton">ADD NEW ENTRY</string>
    <string name="primBusiness">Primary Business</string>
    <string name="address">Address</string>
    <string name="province">Province / Territory:</string>
    <string name="busName">Name</string>
    <string name="busNumber">Business #</string>

    <string-array name="provinces">
        <item>" "</item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>


</resources>
